5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1635_2445.log
== TEST (2019-04-14 09:29:27) 
-- CODE:
t = input("F ou C: ")
vt = float(input("valor da temperatura: "))
c = (5*vt - 5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(f, 2)
else:
	print(c, 2)
-- OUTPUT:
608.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:29:47) 
-- CODE:
t = input("F ou C: ")
vt = float(input("valor da temperatura: "))
c = (5*vt - 5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(f, 2)
else:
	print(c, 2)
-- EXECUTION TIME:
0.289852
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0 2
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0 2
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:30:34) 
-- CODE:
t = input("F ou C: ")
vt = float(input("valor da temperatura: "))
c = (5*vt - 5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print((round(f, 2))
else:
	print(round(c, 2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:30:47) 
-- CODE:
t = input("F ou C: ")
vt = float(input("valor da temperatura: "))
c = (5*vt - 5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(round(f, 2))
else:
	print(round(c, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:31:00) 
-- CODE:
t = input("F ou C: ")
vt = float(input("valor da temperatura: "))
c = (5*vt - 5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(round(f, 2))
else:
	print(round(c, 2))
-- EXECUTION TIME:
0.138358
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
